added a python app

--- a/Dani's notebook.ipynb
+++ b/Dani's notebook.ipynb
@@ -4,7 +4,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MKTYP-- Dani's notebook"
+    "# Dani's Notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ticket Cost Calculator\n",
+      "How old are you?19\n",
+      "If you are 19 years old, your total will be 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "def movieCost(age):\n",
+    "    if (age)<18 or (age)>=65:\n",
+    "        return 6\n",
+    "    else:\n",
+    "        return 10\n",
+    "        \n",
+    "print (\"Ticket Cost Calculator\")\n",
+    "\n",
+    "age= int(input(\"How old are you?\"))\n",
+    "\n",
+    "print (\"If you are \" \n",
+    "+str (age) \n",
+    "+\" years old, your total will be \" \n",
+    "+str (movieCost(age)))"
+   ]
   },
   {
    "cell_type": "code",
@@ -15,34 +48,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Happy Birthday 1\n",
-      "Happy Birthday 2\n",
-      "Happy Birthday 3\n",
-      "Happy Birthday 4\n",
-      "Happy Birthday 5\n",
-      "Happy Birthday 6\n",
-      "Happy Birthday 7\n",
-      "Happy Birthday 8\n",
-      "Happy Birthday 9\n",
-      "Happy Birthday 10\n",
-      "Happy Birthday 11\n",
-      "Happy Birthday 12\n",
-      "Happy Birthday 13\n",
-      "Happy Birthday 14\n",
-      "Happy Birthday 15\n",
-      "Happy Birthday 16\n",
-      "Happy Birthday 17\n",
-      "Happy Birthday 18\n",
-      "Happy Birthday 19\n"
+      "Ticket Cost Calculator\n",
+      "How old are you?63\n",
+      "If you are 63 years old, your total will be 10\n"
      ]
     }
    ],
-   "source": [
-    "i=1\n",
-    "while (i<=19):\n",
-    "    print(\"Happy Birthday \"+str(i))\n",
-    "    i=i+1\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
