--- a/Dani's notebook.ipynb
+++ b/Dani's notebook.ipynb
@@ -41,17 +41,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is the shape name?\n",
+      "Insert the number of sides4\n",
+      "square or rectangle\n"
+     ]
+    }
+   ],
+   "source": [
+    "def shapeName(s):\n",
+    "    if s==3:\n",
+    "        print ('triangle')\n",
+    "    elif s==0:\n",
+    "        print ('circle')\n",
+    "    elif s==4:\n",
+    "        print ('square or rectangle')\n",
+    "    elif s==5:\n",
+    "        print ('pentagon')\n",
+    "    elif s==6: \n",
+    "        print ('hexagon')\n",
+    "    elif s==7:\n",
+    "        print ('septagon')\n",
+    "    else:\n",
+    "        print ('i do not know')\n",
+    "        \n",
+    "print (\"What is the shape name?\")\n",
+    "shape= int(input(\"Insert the number of sides\"))\n",
+    "shapeName (shape) "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def nextHailstone(n):\n",
+    "    if(n%2==0):\n",
+    "        return int(n/2)\n",
+    "    else: \n",
+    "        return 3*n+1\n",
+    "print (\"Hailstone Calculator\")\n",
+    "hail=int(input(\"Insert a number\"))\n",
+    "while hail>1:\n",
+    "    hail=nextHailstone(hail)\n",
+    "    print (hail)"
+   ]
   }
  ],
  "metadata": {
